<resources>
    <string name="app_name">ChatApp</string>
    <string name="create_new_account">Create New Account</string>
    <string name="i_have_account">I Have Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_screen">Request Screen</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
</resources>
