<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chatapp.RegisterActivity">
    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarregister"/>

    <TextView
        android:id="@+id/txtid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbarregister"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txtinfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/txtid"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtinfo2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtusername"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtemail"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        tools:ignore="RtlCompat" />


</RelativeLayout>