<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<include layout="@layout/actionbar_app"
    android:id="@+id/actionbarlogin"/>
    <TextView
        android:id="@+id/txtid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbarlogin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txtinfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtid"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/txtemaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtinfo2"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtemaillogin"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password" />


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        tools:ignore="RtlCompat" />



</RelativeLayout>